add paramaterization for position, allow user to filter the spreadsheet by position

--- a/app/football/templates/home.html
+++ b/app/football/templates/home.html
@@ -103,7 +103,9 @@
                 <a href={{ player.espn_link }} target="_blank"> ESPN </a> 
              </td>
             <td> {{ player.string }} </td>
-            <td> {{ player.position }} </td>
+            <td>
+                <a href={{ player.position_url }} target="_blank"> {{ player.position }} </a>
+            </td>
             <td>
                 <a href={{ player.team_url }} target="_blank"> {{ player.team }} </a>
             </td>
