--- a/app/football/templates/home.html
+++ b/app/football/templates/home.html
@@ -5,11 +5,23 @@
         }
         th {
         text-align: center;
-        padding: 10px
+        padding: 10px;
+        position: -webkit-sticky;
+        position: sticky;
+        top: 0;
+        z-index: 2;
+        background-color: white;
+        border: 1px solid black;
         }
         td {
         text-align: center;
         padding: 5px;
+        border: 1px solid black;
+        }
+        thead {
+            background-color: white;
+            border-radius: 1px;
+            border-color: black;
         }
     </style>
 
