add a donations page

--- a/app/football/templates/home.html
+++ b/app/football/templates/home.html
@@ -29,7 +29,8 @@
     </style>
 
     <h1>draft.support</h1>
-    <p>Historical Data is based on 2020-2022 Seasons</p>
+    <p>Historical Data is based on 2020-2022 Seasons -- <a href="/donate/">donate</a></p>
+    
 
 
 
