--- a/app/football/templates/team.html
+++ b/app/football/templates/team.html
@@ -26,7 +26,7 @@
     <h1>{{ pass_att }}</h1>
     <h1>{{ rush_pct|floatformat:3 }}</h1> -->
 
-    <h1>Team Offense</h1>
+    <h1>2022 Team Offense</h1>
     <table>
         <tr>
             <th>
@@ -305,7 +305,7 @@
 </table>
 
 
-<h1>Team Defense</h1>
+<h1>2022 Team Defense</h1>
 <table>
     <tr>
         <th>
