--- a/app/football/templates/stats.html
+++ b/app/football/templates/stats.html
@@ -82,7 +82,7 @@
             {{ player.player__name }}
         </td>
         <td>
-            {{ player.player__team__id }}
+            {{ player.player__team_id }}
         </td>
         <td>
             {{ player.games_played }}
