--- a/app/football/templates/stats.html
+++ b/app/football/templates/stats.html
@@ -29,7 +29,7 @@
 </style>
 
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
-<h1> PLAYER STATS </h1>
+<h1> PLAYER STATS  2021-2023</h1>
 <h2>
     <a target="_blank" href="/teamstats">See Stats By Team</a></h2>
     <table class="sortable">
