--- a/app/football/templates/teamstats.html
+++ b/app/football/templates/teamstats.html
@@ -29,7 +29,7 @@
 </style>
 
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
-<h1> TEAM STATS </h1>
+<h1> TEAM STATS 2021-2023 </h1>
 <h2>
     <a target="_blank" href="/">See Stats By Player</a></h2>
 <table class="sortable">
