add a flex page and tweak title tags

--- a/app/football/templates/stats.html
+++ b/app/football/templates/stats.html
@@ -27,6 +27,11 @@
         border-color: black;
     }
 </style>
+<head>
+    <title>
+        {{ title }}
+    </title>
+</head>
 
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 <h1> PLAYER STATS  2021-2023</h1>
