--- a/app/football/templates/teamstats.html
+++ b/app/football/templates/teamstats.html
@@ -27,6 +27,12 @@
         border-color: black;
     }
 </style>
+<head>
+    <title>
+        {{ title }}
+    </title>
+</head>
+
 
 <script src="https://www.kryogenix.org/code/browser/sorttable/sorttable.js"></script>
 <h1> TEAM STATS 2021-2023 </h1>
